--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,7 +140,7 @@ body {
 
 @layer components {
   .home-section {
-    @apply flex gap-4 justify-between items-stretch w-full max-lg:flex-col-reverse max-lg:items-center;
+    @apply flex gap-4 justify-start items-stretch w-full max-lg:flex-col-reverse max-lg:items-center;
   }
   .home-section2 {
     @apply flex gap-4 justify-between items-start w-full max-lg:flex-col-reverse max-lg:items-center;
@@ -214,7 +214,7 @@ body {
     @apply overflow-y-auto w-full flex flex-col gap-4 max-sm:gap-2 pr-2 h-full text-2xl;
   }
   .transcript-fade {
-    @apply pointer-events-none absolute bottom-0 left-0 right-0 h-40 max-sm:h-20 bg-gradient-to-t from-background via-background/90 to-transparent z-10;
+    @apply pointer-events-none absolute bottom-0 left-0 right-0 h-4 max-sm:h-20 bg-gradient-to-t from-background via-background/90 to-transparent z-10;
   }
 }
 
